[gd_scene load_steps=3 format=3 uid="uid://byol2x2dxte6y"]

[ext_resource type="Script" path="res://Scripts/spawn_area.gd" id="1_g8ahm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1vop"]
size = Vector2(53, 50)

[node name="SpawnArea" type="Area2D"]
position = Vector2(-311, 0)
script = ExtResource("1_g8ahm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g1vop")

[node name="spawnPoint" type="Marker2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
